# boggle-solver

./: .gitignore  boggle-solver.cabal
app/: Main.hs
src/Boggle/: Solver.hs
test/: Spec.hs
