name:                   boggle-solver
version:                0.1.0.0
license:                BSD3
license-file:           LICENSE
author:                 Jonathan Childress
copyright:              2017 Jonathan Childress
category:               Algorithms
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Boggle.Solver
  ghc-options:          -Wall -Werror
  build-depends:        base >= 4.7 && < 5
                      , attoparsec
                      , text
                      , vector
  default-language:     Haskell2010

executable boggle-solver
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , vector
  default-language:     Haskell2010

test-suite boggle-solver-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , vector
  ghc-options:          -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:                 git
  location:             https://github.com/Jonplussed/boggle-solver
